Add put and patch for Tag
